# gpt-researcher-upgrade

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture-question.md  feature-slice.md
.github/workflows/: focused-tests.yml
backend/: requirements.txt
docs/: decision-log.md  example-schemas.md  github-publish.md  prd.md  roadmap.md  technical-design.md
gpt_researcher/: __main__.py  agent.py  cli.py
gpt_researcher/project/: __init__.py  exporter.py  models.py  runtime.py  store.py
gpt_researcher/skills/: writer.py
gpt_researcher/utils/: output_sanitizer.py
src/gptr_upgrade/: __init__.py  cli.py  common.py  demo.py  exporter.py  scaffold.py
src/gptr_upgrade/artifacts/: __init__.py  models.py  store.py
src/gptr_upgrade/capabilities/: __init__.py  models.py
src/gptr_upgrade/checkpoints/: __init__.py  models.py  store.py
src/gptr_upgrade/memory/: __init__.py  models.py  store.py
src/gptr_upgrade/queue/: __init__.py  models.py  store.py
src/gptr_upgrade/sources/: __init__.py  models.py  store.py
src/gptr_upgrade/workspace/: __init__.py  models.py  store.py
tests/: test_agent_project_mode.py  test_capabilities.py  test_cli_flow.py  test_cli_project_mode.py  test_output_sanitizer.py  test_project_workspace.py  test_scaffold.py  test_workspace_flow.py
